# FishGfx

./: .editorconfig  .gitignore  .gitmodules  BUGS.md  FishGfx.Modern.sln  FishGfx.sln  FishGfx_Only.sln  GRAPHICS_API.md  INFO.md  MANIFOLD_CAD.md  README.md  RealSenseTest.cap  Test.cap  Test_FishGfx.cap  Test_Nuklear.cap  corsa_flange.step
BMFont/: bmfont.bmfc  proggy.bmfc  proggy.fnt
FishGfx.CadKernel/: CadDocument.cs  CadGeometry.cs  CadModels.cs  CadProjectArchive.cs  CollectorModels.cs  CollectorSystemTransaction.Layout.cs  CollectorSystemTransaction.cs  FishGfx.CadKernel.csproj  ManifoldProject.cs  NativeMethods.cs  RunnerCollectionJson.cs  RunnerEvaluation.cs  RunnerGraph.cs  RunnerGraphJson.cs  RunnerPlanning.cs
FishGfx.CadKernel.Native/: CMakeLists.txt  CMakePresets.json  THIRD_PARTY_NOTICES.md  vcpkg.json
FishGfx.CadKernel.Native/include/: FishGfxCadKernel.h
FishGfx.CadKernel.Native/src/: CadKernel.cpp
FishGfx.CadKernel.Native/tests/: CadKernelTests.cpp
FishGfx.FishUI/: FishGfx.FishUI.csproj  FishGfxFishUIEvents.cs  FishGfxFishUIGraphics.cs  FishGfxFishUIInput.cs  FishUIConversions.cs  FishUIGraphicsBackend.Drawing.cs  FishUIGraphicsBackend.Resources.cs  FishUIGraphicsBackend.cs  FishUIInputAdapter.cs  FishUIInputState.cs  FishUITextLayout.cs  NullFishUIEvents.cs  RootedFishUIFileSystem.cs
FishGfx.ManifoldCad/: BezierDraftState.cs  CadLayout.cs  CadUi.cs  (+17 more)
FishGfx.ManifoldCad.Tests/: BezierDraftTests.cs  CadLayoutTests.cs  CollectorSystemTests.cs  ExportReadinessTests.cs  FishGfx.ManifoldCad.Tests.csproj  NativeIntegrationTests.cs  PersistenceAndRelationshipTests.cs  RunnerGraphTests.cs
(+622 files in other folders)
